Update and rename 2018-06-17-Moonlight-Wait-No-Disobedience-2018.markdown to 2018-06-17-Disobedience-2018.markdown

--- a/_posts/2018-06-17-Disobedience-2018.markdown
+++ b/_posts/2018-06-17-Disobedience-2018.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "'Disobedience' Review"
-subtitle: An odd note to kick off pride month.
+subtitle: It's La La Land all over again.
 ---
 
 _Disobedience_ isn't the film I wanted it to be, but that doesn't make it any less important.
@@ -19,3 +19,5 @@ Yet not meaningfully distinguished, if audience reactions are anything to go by.
 Which is more than okay. It's good, even. _Disobedience_ is a fantastic film for what it is ― but I think its greatest obstacle will be convincing its audience of what it isn't. It might be a little less accessible than your standard independent drama, but it's well worth the trouble, just so long as you understand that this isn't quite the film you're hoping for. Which I can't fault it for, really. This isn't a matter of it missing my expectations, so much as it is my expectations missing it. I have no doubt I'd enjoy it much more on a second viewing, because it is a damn good movie. It's just also not the one that I, and many others, wanted it to be.
 
 ---
+
+This piece was originally published by The Pelican on June 30, 2018.
