--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ layout: page
 permalink: /404.html
 ---
 
-<b>404</B>
+<b>That's a 404!</B>{: style="text-align: center"}
 
 Looks like something broke! Or maybe I got embarrassed by my old work and took it down.
 
