--- a/404.md
+++ b/404.md
@@ -3,10 +3,8 @@ layout: page
 permalink: /404.html
 ---
 
-<b>That's a 404!</B>{: style="text-align: center"}
+<b>That's a 404!{: style="text-align: center"}</B>
 
 Looks like something broke! Or maybe I got embarrassed by my old work and took it down.
 
-Either way, the requested page could not be found.
-
-If you think something's missing, feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).
+Either way, the requested page could not be found. Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).
