--- a/404.md
+++ b/404.md
@@ -3,8 +3,8 @@ layout: page
 permalink: /404.html
 ---
 
-<b>That's a 404!{: style="text-align: center"}</B>
+<center><b>That's a 404!</b></center>
 
-Looks like something broke! Or maybe I got embarrassed by my old work and took it down.
+Looks like something broke! Or maybe I just got embarrassed by my old work.
 
 Either way, the requested page could not be found. Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).
