--- a/404.md
+++ b/404.md
@@ -5,6 +5,7 @@ permalink: /404.html
 
 <center><b>That's a 404!</b></center>
 
-Looks like something broke! Or maybe I just got embarrassed by my old work.
 
-Either way, the requested page could not be found. Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).
+Sorry! Looks like something broke! 
+
+Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).
