--- a/404.md
+++ b/404.md
@@ -5,6 +5,6 @@ permalink: /404.html
 
 <center><b>That's a 404!</b></center>
 <br></br>
-Sorry! Looks like something broke! 
+<center>Sorry! Looks like something broke!</center>
 <br></br>
-Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).
+<center>Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).</center>
