--- a/404.md
+++ b/404.md
@@ -3,6 +3,8 @@ layout: page
 permalink: /404.html
 ---
 
-<center><b>That's a 404!</b></center>
-<center>Sorry! Looks like something broke!</center>
-<center>Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).</center>
+<b>That's a 404!</b>
+
+That page wasn't found, sorry!
+
+Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).
