--- a/404.md
+++ b/404.md
@@ -1,10 +1,11 @@
 ---
-layout: page
+layout: plain
 permalink: /404.html
+custom_css: plain
 ---
 
 <b>That's a 404!</b>
 
 That page wasn't found, sorry!
 
-Feel free to let me know on Twitter at [@elliotherriman](https://twitter.com/elliotherriman).
+Feel free to let me know on [Twitter](https://twitter.com/elliotherriman).
